palb/app1/bank.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit
  namespace: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: credit
  template:
    metadata:
      labels:
        app: credit
    spec:
      containers:
      - name: credit
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: credit-svc
  namespace: app1
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: credit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debit
  namespace: app1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: debit 
  template:
    metadata:
      labels:
        app: debit 
    spec:
      containers:
      - name: debit 
        image: nginxdemos/nginx-hello:plain-text
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: debit-svc
  namespace: app1
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: debit
