palb/app1/node-port-bank.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-app1
  namespace: app1
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30054
    protocol: TCP
    name: bank-http
  - port: 443
    targetPort: 443
    nodePort: 30055
    protocol: TCP
    name: bank-https
  selector:
    app: app1-nginx-ingress
